--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   json_annotation: ^3.1.1
   json_converter: ^1.0.2
   json_serializable: ^3.5.0
+  flutter_rating_bar: ^3.2.0
   provider:
 
 
